--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/logo.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rent a Car</title>
   </head>
